--- a/wp-content/themes/mls-theme/style.css
+++ b/wp-content/themes/mls-theme/style.css
@@ -33,6 +33,13 @@ nav{
 .navbar-brand img{
     width: 9rem;
 }
+.dropdown:hover > .dropdown-menu {
+    display: block;
+}
+.dropdown > .dropdown-toggle:active {
+    /* Without this, clicking will make it sticky */
+    pointer-events: none;
+} 
 
 
 header{
@@ -61,8 +68,9 @@ header{
     width: 2rem
 }
 /* .overlay{
-    background-color: #0000005c;
-    color: #ffffff;
+    background-color: #fffefe9d;
+    color: #000000;
+    height: 31rem;
 } */
 .navbar{
     padding: .5rem .5rem;
@@ -570,6 +578,9 @@ button:focus{
 .bg-white{
     background-color: #ffffff;
 }
+.text-white{
+    color: #ffffff;
+}
 
 /* property page */
 
@@ -658,8 +669,16 @@ footer a:hover{
     color: #ffffffb3 !important;
 }
 
-
-
+/* finance vehicle page */
+.finance-vehicle .overlay{
+    background-color: #fffefe9d;
+    color: #000000;
+    height: 31rem;
+}
+.eqipment-hire img{
+    border-radius: 1rem;
+    filter: drop-shadow(0px 60.265px 62.5829px rgba(65, 62, 101, 0.296766));
+}
 
 /* .wpcf7-submit{
     background-color: #000000;
