--- a/wp-content/themes/mls-theme/style.css
+++ b/wp-content/themes/mls-theme/style.css
@@ -19,7 +19,7 @@ body {
 nav{
     /* background-color: #D8E1E5; */
     margin: 0 auto;
-    /* height:85px; */
+    height:70px;
 
 
 }
@@ -619,6 +619,23 @@ button:focus{
 .location img{
     width: 100%;
 }
+/* teams page */
+.team-people{
+    background-color: #CCD408;
+}
+.team-people .rectangle {
+    background-color: #ffffff;
+    width: 100%;
+    height: 1rem;
+    padding: 2rem 0rem;
+    box-shadow: 4px 4px 2px rgb(0 0 0 / 15%);
+    border-radius: 10px;
+}
+
+.lenders img{
+    width: 100%;
+}
+
 footer{
     max-width: 1600px;
     margin: 0 auto;
